syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    string result = 1;
}

message GreetingRequestManyTimes{
    Greeting greeting = 1;
}

message GreetingResponseManyTimes{
    string result = 1;
}


message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
}

service GreetService{
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    //Streaming server
    rpc GreetManyTimes(GreetingRequestManyTimes) returns (stream GreetingResponseManyTimes) {};

    //Streaming client
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}